Added first round of cards with ideas: fonts, rollovers, audio, video, background-image, cursor

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Advanced Topics</h1>
+      <h1>Advanced Ideas</h1>
       <h2>For those who want a little more...</h2>
     </header>
     <section class="mainContent">
@@ -23,36 +23,75 @@
           <span id="fontsFourthLine">Crazy</span>
           <span id="fontsFifthLine">Google Fonts</span>
           </p>
+          <p>
+              <a href="https://developers.google.com/fonts/docs/getting_started" target="_blank">Getting Started with Google Fonts</a>
+          </p>
       </article>
 
+      <article class="card" id="textTreatments">
+        <h3 class="cardTitle">Text Treatments</h3>
+        <p class="cardText">
+          <p>
+            Change the look of your text with:
+            <ul>
+              <li>font-style - <span id="italic">Italic</span></li>
+              <li>font-variant - <span id="smallCaps">Small Caps</span></li>
+              <li>text-decoration - <span id="underline">Underline</span>, <span id="linethrough">line-through</span></li>
+            </ul>
+            (Duckett, pgs. 280-282)
+          </p>
+      </article>
 
       <article class="card" id="rolloverColors">
         <h3 class="cardTitle">Color Rollovers</h3>
         <p class="cardText">
-          Using the :hover pseudo-class, make colors change on rollover.
+          Using the :hover pseudo-class, make colors change on rollover. (Duckett, pg. 291)</p>
+          <p><em>Roll over to see!</em></p>
         </p>
       </article>
 
       <article class="card" id="hoverShadowDisplace">
         <h3 class="cardTitle">Displacement</h3>
         <p class="cardText">
-          Using the :hover pseudo-class, make the card appear to lift off the page by giving it a drop shadow and a slight offset.
+          Using the :hover pseudo-class, make the card appear to lift off the page by giving it a drop shadow and a slight offset. (Duckett, pgs. 291, 320, 366)</p>
+          <p><em>Roll over to see!</em></p>
         </p>
       </article>
 
       <article class="card" id="cursorChange">
         <h3 class="cardTitle">Cursor</h3>
         <p class="cardText">
-          Change the cursor to a whole new shape with the CSS cursor property.
-        </p>
+          Change the cursor to a crosshair with the CSS cursor property. (Duckett, pg. 347)</p>
+          <p><em>Roll over to see!</em></p>
       </article>
 
       <article class="card" id="backgroundImage">
         <h3 class="cardTitle">Background Image</h3>
         <p class="cardText">
-          Use the background-image CSS rule to use an image as the background for part of the page.
+          Use the background-image CSS property to use an image as the background for part of the page. (Duckett, pgs. 412-416)
         </p>
       </article>
+
+      <article class="card" id="audio">
+        <h3 class="cardTitle">Audio</h3>
+        <p class="cardText">
+          Add an audio clip to the page. (Duckett, pgs. 219-222), <a href="http://teamtreehouse.com/library/html-video-and-audio" target="_blank">Treehouse</a></p>
+          <audio src="audio/BUSTER_20141230.mp3" controls></audio>
+        </p>
+      </article>
+
+      <article class="card" id="video">
+        <h3 class="cardTitle">Video</h3>
+        <p class="cardText">
+          Add a video clip to the page. (Duckett, pgs. 209-216), <a href="http://teamtreehouse.com/library/html-video-and-audio" target="_blank">Treehouse</a></p>
+          <video controls>
+            <source src="http://treehouse-code-samples.s3.amazonaws.com/html-video-and-audio/bridge.mp4" type="video/mp4">
+            <source src="http://treehouse-code-samples.s3.amazonaws.com/html-video-and-audio/bridge.ogg" type="video/ogg">
+          </video>
+        </p>
+      </article>
+
+
 
     </section>
   </body>
