Added CSS animations and semantic markup.

--- a/index.html
+++ b/index.html
@@ -32,13 +32,28 @@
         <h3 class="cardTitle">Text Treatments</h3>
         <p class="cardText">
           <p>
-            Change the look of your text with:
+            Change the look of your text with CSS rules:
             <ul>
               <li>font-style - <span id="italic">Italic</span></li>
               <li>font-variant - <span id="smallCaps">Small Caps</span></li>
               <li>text-decoration - <span id="underline">Underline</span>, <span id="linethrough">line-through</span></li>
             </ul>
             (Duckett, pgs. 280-282)
+          </p>
+      </article>
+
+      <article class="card" id="semantics">
+        <h3 class="cardTitle">HTML5 Semantic Markup</h3>
+        <p class="cardText">
+          <p>
+            Try some markup based on the meaning of your text:
+            <ul>
+              <li><strong>&lt;cite&gt;</strong> - For <cite>Titles of Books and Other Works</cite></li>
+              <li><strong>&lt;abbr&gt;</strong> - For <abbr>Abbreviations and Acronyms</abbr></li>
+              <li><strong>&lt;kbd&gt;</strong> - For <kbd>keyboard inputs</kbd></li>
+              <li><strong>&lt;code&gt;</strong> - For <code>computer code</code></li>
+            </ul>
+            (Duckett, pgs. 50-58)
           </p>
       </article>
 
@@ -91,6 +106,15 @@
         </p>
       </article>
 
+      <article class="card" id="CSSAnimations">
+        <h3 class="cardTitle">CSS Animations</h3>
+        <p class="cardText">
+          Use CSS Animations to change CSS values over time. <a href="http://teamtreehouse.com/library/css-beyond-the-basics" target="_blank">Treehouse</a>, <a href="http://www.w3schools.com/css/css3_animations.asp">W3 Schools</a></p>
+        </p>
+        <div id="spinningSquare">
+            <span></span>
+        </div>
+      </article>
 
 
     </section>
