Tweaked elements, including background image

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <article class="card" id="CSSAnimations">
         <h3 class="cardTitle">CSS Animations</h3>
         <p class="cardText">
-          Use CSS Animations to change CSS values over time. <a href="http://teamtreehouse.com/library/css-beyond-the-basics" target="_blank">Treehouse</a>, <a href="http://www.w3schools.com/css/css3_animations.asp">W3 Schools</a></p>
+          Use CSS Animations to change CSS values over time. <a href="http://teamtreehouse.com/library/css-beyond-the-basics" target="_blank">Treehouse</a>, <a href="http://www.w3schools.com/css/css3_animations.asp" target="_blank">W3 Schools</a></p>
         </p>
         <div id="spinningSquare">
             <span></span>
